--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,16 +2,13 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
- "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-}
-
-
-,
-
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.3",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.19",
